views/themes/worker/assets/stylesheets/worker/app.scss
.qor-page__header {
  padding: 0;
}

.qor-slideout__sub-title{
	font-size: 20px;
	line-height: 1;
	margin: 20px 0 10px 0;
}

.qor-worker-form-list{
    padding-left: 16px;
    .qor-field{
        padding: 0;
    }
    .qor-field__block{
        padding-bottom: 0;
    }
    .qor-form__actions{
        margin-top: 0;
        .mdl-button{
            float: left;
        }
    }
	.qor-worker--new{
		margin: 2px 0;
		display: inline-block;
        text-decoration: none;
	}
}

.workers-label-title,.workers-label-content{
    margin: 0;
}

.workers-label-title{
    font-size: 12px;
    color: rgba(0, 0, 0, 0.54);
}

.workers-label-content{
    font-size: 14px;
}

.workers-log-output{
    background-color: #222;
    color: #fff;
    font-family: "menlo","Roboto", "Helvetica", "Arial", sans-serif;
    height: 300px;
    padding: 8px;
    overflow: auto;
    box-sizing: border-box;
    p{
        line-height: 1;
        font-size: 12px;
        margin: 0;
        margin-bottom: 4px;
    }
}

.workers-error-output{
    max-height: 500px;
    overflow: auto;
}

.qor-workers-buttons{
    button{
        display: block;
        float: right;
        margin: 16px;
    }
}

.qor-worker--progress{
    .workers-label-content{
        float: left;
        width: 105px;
    }
    .mdl-progress{
        float: left;
        margin-top: 10px;
        width: calc(100% - 105px);
        &.has-errors-texts{
            width: calc(100% - 262px);
            &+a{
                display: inline-block;
                margin: 3px 0 0 20px;
                text-transform: uppercase;
            }
        }
    }
}

.workers-error-output{
    margin: 0;
}

.worker-process-error{
    background-color: rgb(255,64,129);
    color: #fff;
}

.qor-modal--worker-errors{
    .mdl-card{
        max-width: 80%;
    }
}

